Input provider, outputCapture, fixes and tests